@@ -13,6 +13,6 @@ int mmap_unmap(const char* mapped,size_t maplen) {
   (void)maplen;
   return UnmapViewOfFile(mapped)?0:-1;
 #else
-  return munmap((char*)mapped,maplen);
+  return maplen ? munmap((char*)mapped,maplen) : 0;
 #endif
 }
